added other wardrobes

--- a/kirsten.html
+++ b/kirsten.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="lilah.css">
+    <link rel="stylesheet" href="kirsten.css">
     <title>Autumn Wardrobes</title>
 </head>
 <body>
@@ -13,16 +13,18 @@
         <h1>autumn wardrobes</h1>
         <nav class="navbar">
             <ul class="nav-list">
-                <li><a id="current" href="">lilah</a></li>
+                <li><a href="lilah.html">lilah</a></li>
                 <li><a href="mandy.html">mandy</a></li>
                 <li><a href="nour.html">nour</a></li>
-                <li><a href="kirsten.html">kirsten</a></li>
+                <li><a id="current" href="">kirsten</a></li>
                 <li><a href="about.html">about</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="game-box">
+    <p>coming soon...</p>
+
+    <!-- <section class="game-box">
         <div class="doll-left">
             <div class="parent">
                 <img id="base-layer" src="lilah-wardrobe/base-layer.png">
@@ -57,7 +59,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     
 </body>
 </html>
