added an index.html file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="lilah.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="lilah.css">
     <title>Autumn Wardrobes</title>
 </head>
 <body>
@@ -19,12 +18,8 @@
                 <li><a href="mandy.html">mandy</a></li>
                 <li><a href="nour.html">nour</a></li>
                 <li><a href="kirsten.html">kirsten</a></li>
-                <li><a id="current" href="">about</a></li>
+                <li><a href="about.html">about</a></li>
             </ul>
         </nav>
     </header>
-    <section class="credit">
-        <p>artist: lavleen kaur, <a href="https://instagram.com/gulaabi.art">@gulaabi.art</a></p>
-        <p>wardrobe curations: lorenza, <a href="https://instagram.com/fleure.sombre">@fleure.sombre</a></p>
-    </section>
 </body>
