--- a/kirsten.html
+++ b/kirsten.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="kirsten.css">
+    <link rel="stylesheet" href="style.css">
     <title>Autumn Wardrobes</title>
 </head>
 <body>
     <script src="script.js"></script>
     <header>
-        <h1>autumn wardrobes</h1>
+        <h1><a href="index.html">autumn wardrobes</a></h1>
         <nav class="navbar">
             <ul class="nav-list">
                 <li><a href="lilah.html">lilah</a></li>
